--- a/android-native/app/src/main/res/layout/activity_login.xml
+++ b/android-native/app/src/main/res/layout/activity_login.xml
@@ -65,6 +65,14 @@
             android:backgroundTint="@color/brand_red"
             android:textColor="#FFFFFF"/>
 
+        <TextView
+            android:id="@+id/btnRegister"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="没有账号？一键注册"
+            android:textColor="@color/brand_red"/>
+
         <ProgressBar
             android:id="@+id/progress"
             style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
